src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail21.jova
class Main {
  public int x;
  public int main() {

    return 0;
  }

}